# HackrsChat

./: .gitignore  Cargo.toml  Justfile  README.md  cursive_example.rs  design_choices.md  run.sh
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml
.devcontainer/custom/: .bashrc  gu
docs/: design_choices.md
hackrschat-client/: Cargo.toml
hackrschat-client/assets/: logo_full.txt
hackrschat-client/src/: main.rs  user.rs
hackrschat-server/: Cargo.toml
hackrschat-server/src/: main.rs
hackrschat-server/src/db/: mod.rs  user.rs
server/: Cargo.toml
server/src/: main.rs
server/src/db/: database.rs  mod.rs  user.rs
src/: main.rs  server.rs
