[package]
name = "hackrschat"
version = "0.1.0"
authors = ["Ezra Hulsman <[info@ezrah.me]>"]
edition = "2021"

[workspace]

[dependencies]
cursive = "0.21"
cursive-async-view = "0.6.0"
tokio = { version = "1.39.3", features = [
  # "full",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }

hackrschat-server = { path = "server" }