[workspace]
members = [
    "hackrschat-client",
    "hackrschat-server",
]
resolver = "2"

# These will be the same for both workspace members
[workspace.package]
rust-version = "1.80.1"
edition = "2021"
version = "0.1.0"
authors = ["Ezra Hulsman <[info@ezrah.me]>", "Max Gallup <[maxgallup@pm.me]>"]
repository = "https://github.com/Arc891/HackrsChat"
