[package]
name = "hackrschat-client"

# Inherit from root's Cargo.toml
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
cursive = "0.21"
cursive-async-view = "0.6.0"
tokio = { version = "1.39.3", features = [
  # "full",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }

