[package]
name = "hackrschat-server"

# Inherit from root's Cargo.toml
rust-version.workspace = true
edition.workspace = true
version.workspace = true
authors.workspace = true
repository.workspace = true


[dependencies]
anyhow = "1.0.86"
dotenv = "0.15.0"
rcgen = "0.13.1"
rustls = "0.23.12"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "=0.8.0", features = [
  "postgres",
  "runtime-tokio",
  "time",
  "chrono",
] }
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.39.3", features = [
  # "full",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
tokio-rustls = "0.26.0"

