[package]
name = "hackrschat-server"
version = "0.1.0"
authors = ["Ezra Hulsman <[info@ezrah.me]>"]
edition = "2021"

[dependencies]
anyhow = "1.0.86"
sqlx = { version = "0.8.0", features = ["postgres", "runtime-tokio"] }
tokio = { version = "1.39.3", features = [
  # "full",
  "io-util",
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
  "sync",
] }
